--- a/.github/workflows/armada-infra.yml
+++ b/.github/workflows/armada-infra.yml
@@ -22,6 +22,9 @@ jobs:
         client-id: ${{ secrets.AZURE_CLIENT_ID }}
         tenant-id: ${{ secrets.AZURE_TENANT_ID }}
         subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }} 
+
+    - name: Set execute permissions for deploy.sh
+      run: chmod +x ./bicep/novnet/deploy.sh
         
     - name: Run deploy script
       run: ./bicep/novnet/deploy.sh
