--- a/.github/workflows/armada-infra.yml
+++ b/.github/workflows/armada-infra.yml
@@ -23,8 +23,24 @@ jobs:
         tenant-id: ${{ secrets.AZURE_TENANT_ID }}
         subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }} 
 
-    - name: Set execute permissions for deploy.sh
-      run: chmod +x ./bicep/novnet/deploy.sh
-        
-    - name: Run deploy script
-      run: cd ./bicep/novnet; ./deploy.sh --resourceGroupName rg-armada --location eastus2
+    - name: Bicep Deploy
+      uses: Azure/bicep-deploy@v2
+      with:
+        # Specifies the execution type, which can be either 'deployment' or 'deploymentStack'.
+        type: deployment
+        # Specifies the operation to perform. For deployment, choose from 'create', 'validate', 'whatIf'. For deploymentStack, choose from 'create', 'delete', 'validate'.
+        operation: create
+        # Specifies the name of the deployment or deploymentStack.
+        name: ${{ github.run_id }}
+        # Specifies the location of the deployment or deploymentStack. Must be provided if the 'scope' parameter is 'subscription', 'managementGroup' or 'tenant'.
+        location: eastus2
+        # Specifies the scope of the deployment or deploymentStack. For deployment, choose from 'resourceGroup', 'subscription', 'managementGroup', 'tenant'. For deploymentStack, choose from 'resourceGroup', 'subscription', 'managementGroup'.
+        scope: resourceGroup
+        # Specifies the resource group name.
+        resource-group-name: rg-armada
+        # Specifies the path to the template file.
+        template-file: ./bicep/novnet/main.bicep
+        # Specifies the path to the parameters file.
+        parameters-file: ./bicep/novnet/main.bicepparam
+        # Specifies the parameters to use.
+        parameters: 'prefix=armada suffix=dev'
