--- a/.github/workflows/armada-infra.yml
+++ b/.github/workflows/armada-infra.yml
@@ -35,4 +35,4 @@ jobs:
         resource-group-name: rg-armada
         template-file: ./bicep/novnet/main.bicep
         parameters-file: ./bicep/novnet/main.bicepparam
-        parameters: '{"prefix":"armada", "suffix":"dev"}'
+        parameters: '{"prefix":"armada"}'
