--- a/.github/workflows/armada-infra.yml
+++ b/.github/workflows/armada-infra.yml
@@ -33,4 +33,4 @@ jobs:
         subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }} 
         resource-group-name: rg-armada
         template-file: ./bicep/novnet/main.bicep
-        parameters: '{"prefix":"armada", "userObjectId‎":"${{ secrets.AZURE_CLIENT_ID }}"}'
+        parameters: '{"prefix":"armada", "userObjectId‎":"1c408c2b-3b76-46c0-861c-aa82bd370036","keyVaultEnableSoftDelete":false,"keyVaultEnablePurgeProtection":false}'
