Update projectFriendlyName in armada-infra.yml

--- a/.github/workflows/armada-infra.yml
+++ b/.github/workflows/armada-infra.yml
@@ -43,5 +43,5 @@ jobs:
             "keyVaultEnablePurgeProtection":false,
             "hubFriendlyName":"Armada Hub",
             "hubDescription":"Armada Hub",
-            "projectFriendlyName":"Armada Project",
+            "projectFriendlyName":"Armada Project"
           }'
